fixes alignments betweent two section

--- a/ainex-react-nextjs-template/ainex/src/app/assets/sass/components/_footer.scss
+++ b/ainex-react-nextjs-template/ainex/src/app/assets/sass/components/_footer.scss
@@ -62,7 +62,15 @@ START: Theme Footer CSS
 	}
 }
 .footer-logo {
-	max-width: 150px;
+	max-width: 220px;
+
+	@media #{$md} {
+		max-width: 200px;
+	}
+
+	@media #{$sm, $xs} {
+		max-width: 180px;
+	}
 }
 
 .footer-widget {
